minor issue changes

--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -53,7 +53,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Any Other location <span
+                                        <label class="form_label">Any Other Location <span
                                                 class="start_css">*</span></label>
                                         <input #otherLocation type="text" class="form-control" formControlName="otherLocation" 
                                         (input)="otherLocation.value = otherLocation.value.toUpperCase()"
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Type location</label>
+                                        <label class="form_label">Type Location</label>
                                         <input type="text" class="form-control" placeholder="Type location"
                                             formControlName="typeLocation">
                                     </div>
@@ -111,7 +111,7 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">
-                                            Additional MSIL email
+                                            Additional MSIL Email
                                         </label>
                                         <input type="text" class="form-control" placeholder="Enter Auditee MSIL email"
                                             formControlName="additionalMSILEmail">
@@ -120,7 +120,7 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">
-                                            Auditee email id <span class="start_css">*</span>
+                                            Auditee Email Id <span class="start_css">*</span>
                                         </label>
                                         <input type="text" class="form-control" placeholder="xyz@gmail.com"
                                             formControlName="auditeeEmail">
@@ -131,7 +131,7 @@
                                         <label class="form_label">
                                             Upload File
                                         </label>
-                                        <input type="file" id="exampleInputFile" (change)="onFileSelected($event)"
+                                        <input type="file" (change)="onFileSelected($event)"
                                             formControlName="attachment" class="form-control">
                                     </div>
                                 </div>
