--- a/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
@@ -5,7 +5,7 @@
         <div class="card">
           <div class="card-header">
             <div class="header_card">
-              <h3 class="card-title">View Plan Details</h3>
+              <h3 class="card-title">Assign Auditor</h3>
             </div>
           </div>
           <div class="card-body">
