--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -58,7 +58,6 @@
                 <h3 class="card-title">View Plan Details</h3>              
               </div>
               <div class="d-flex align-items-center justify-content-center">
-                <h6 class="mr-1 mb-0">Filters:-</h6>
                 <div class=" mr-1">
                   <label class="filter_label">Vendor Code</label>
                 <input type="text" [(ngModel)]="vendorCode" class="form-control  filter_css" placeholder="Vendor Code ">
@@ -98,7 +97,6 @@
                       <th>Planned Start Date </th>
                       <th>Planned End Date</th>
                       <th>Report release date</th>
-                      <th>Category</th>
                       <th>Report</th>
                       <th>Status Pending at</th>
                       <th *ngIf="isSuperAdmin || isPlanner">Action </th>
@@ -118,13 +116,12 @@
                       <td>{{item.plannedStartDate | date:dateFormate}}</td>
                       <td>{{item.plannedEndDate | date:dateFormate}}</td>
                       <td>{{item.reportReleaseDate | date:dateFormate}}</td>
-                      <td><p class="btn btn-success"></p></td>
                       <td>{{item.typeOfReport}}</td>
                       <td>{{item.statusPendingAt}}</td>
                       <td *ngIf="isSuperAdmin || isPlanner">
                         <a (click)="viewPlan(item)" data-toggle="tooltip" data-placement="top" title="Tooltip on top"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>             
                       </td>
-                      <td *ngIf="isSuperAdmin || isPlanner">   <a *ngIf="isSuperAdmin" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a></td>
+                      <td *ngIf="isSuperAdmin">   <a *ngIf="isSuperAdmin && item.status == 'Accepted'" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a></td>
                       <td><p [ngClass]="item.status" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.status}} </p></td>
                       <td><button class="btn btn-primary" (click)="pendingAction(item)" data-toggle="tooltip" data-placement="top" title="Tooltip on top" >
                       {{item.actionPlanStatus}}</button></td>
