--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -59,35 +59,42 @@
                                 <h3 class="card-title">Audit Area Details</h3>
                             </div>
                             <div class="d-flex align-items-center justify-content-center">
-                                <h6 class="mr-1 mb-0">Filters:-</h6>
                                 <div class=" mr-1">
                                     <label class="filter_label">Vendor Code</label>
-                                    <input type="text" [(ngModel)]="vendorCode"  class="form-control mr-1 filter_css" placeholder="Vendor Name ">
-                                  </div>
-                                <div class=" mr-1">
-                                  <label class="filter_label">Vendor Name</label>
-                                  <input type="text" [(ngModel)]="vendorName" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
+                                    <input type="text" [(ngModel)]="vendorCode" class="form-control mr-1 filter_css"
+                                        placeholder="Vendor Code ">
                                 </div>
-              
                                 <div class=" mr-1">
-                                  <label class="filter_label">From Date</label>
-                                  <input type="date" [(ngModel)]="plannedStartDate" class="form-control mr-1 filter_css" placeholder="Date ">
-                              </div>
-              
-                             <div class=" mr-1">
-                                  <label class="filter_label">To Date</label>
-                                  <input type="date" [(ngModel)]="plannedEndDate" class="form-control mr-1 filter_css" placeholder="Date ">
-                              </div>
-              
-                             <div class=" mr-1">
-                                  <label class="filter_label">Status</label>
-                                  <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css" placeholder="Status ">
-                              </div>
-               <div class="mt_24">
-                <button type="button" (click)="filter()" class="form-control mr-1 filter_css heigh_60 btn btn-primary"><span>Submit</span> </button>
-                <button type="button" (click)="reset()" class="form-control mr-1 filter_css heigh_60 btn btn-secondary"><span>Reset</span></button>
-                              </div>
-                              </div>
+                                    <label class="filter_label">Vendor Name</label>
+                                    <input type="text" [(ngModel)]="vendorName" class="form-control mr-1 filter_css"
+                                        placeholder="Vendor Name ">
+                                </div>
+
+                                <div class=" mr-1">
+                                    <label class="filter_label">From Date</label>
+                                    <input type="date" [(ngModel)]="plannedStartDate"
+                                        class="form-control mr-1 filter_css" placeholder="Date ">
+                                </div>
+
+                                <div class=" mr-1">
+                                    <label class="filter_label">To Date</label>
+                                    <input type="date" [(ngModel)]="plannedEndDate" class="form-control mr-1 filter_css"
+                                        placeholder="Date ">
+                                </div>
+
+                                <div class=" mr-1">
+                                    <label class="filter_label">Status</label>
+                                    <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css"
+                                        placeholder="Status ">
+                                </div>
+                                <div class="mt_24">
+                                    <button type="button" (click)="filter()"
+                                        class="form-control mr-1 filter_css heigh_60 btn btn-primary"><span>Submit</span>
+                                    </button>
+                                    <button type="button" (click)="reset()"
+                                        class="form-control mr-1 filter_css heigh_60 btn btn-secondary"><span>Reset</span></button>
+                                </div>
+                            </div>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive max_hei_table">
@@ -100,29 +107,34 @@
                                             <th>Any Other Location</th>
                                             <th>Planned Start Date </th>
                                             <th>Planned End Date</th>
-                                           
                                             <th>Status </th>
                                             <th *ngIf="isAuditor || isPlanner">View</th>
                                             <th *ngIf="isAuditor || isSuperAdmin || isPlanner">Initiate Audit </th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="tbody_data" *ngFor="let item of viewPlanListToShow | paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
-                                         <td>{{item.vendorCode}}</td>
-                                         <td>{{item.vendorName}}</td>
-                                         <td>{{item.locationName}}</td>
-                                         <td>{{item.otherLocation}}</td>
-                                         <td>{{item.plannedStartDate | date:dateFormate}}</td>
-                                         <td>{{item.plannedEndDate | date:dateFormate}}</td>
-                                       
-                                         <td><p [ngClass]="item.status" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.status}} </p></td>
+                                        <tr class="tbody_data"
+                                            *ngFor="let item of viewPlanListToShow | paginate: { itemsPerPage: pagination.pageSize, currentPage: pagination.pageNumber } ;let i =index">
+                                            <td>{{item.vendorCode}}</td>
+                                            <td>{{item.vendorName}}</td>
+                                            <td>{{item.locationName}}</td>
+                                            <td>{{item.otherLocation}}</td>
+                                            <td>{{item.plannedStartDate | date:dateFormate}}</td>
+                                            <td>{{item.plannedEndDate | date:dateFormate}}</td>
+                                            <td>
+                                                <p [ngClass]="item.status" data-toggle="tooltip" data-placement="top"
+                                                    title="Tooltip on top">{{item.status}} </p>
+                                            </td>
                                             <td *ngIf="isAuditor || isPlanner">
-                                                <a (click)="viewManageAudit()" data-toggle="tooltip" data-placement="top" title="Tooltip on top"><img
+                                                <a (click)="viewManageAudit()" data-toggle="tooltip"
+                                                    data-placement="top" title="Tooltip on top"><img
                                                         src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
                                             </td>
-                                            <td *ngIf="isAuditor || isSuperAdmin || isPlanner">
-                                                <a (click)="initiateAudit(item)" data-toggle="tooltip" data-placement="top" title="Tooltip on top"><img
-                                                        src="../../../../assets/icons/auditini.png" class="viwe_iamge"></a>
+                                            <td *ngIf="(isAuditor || isSuperAdmin || isPlanner) && item.status == 'Accepted'">
+                                                <a (click)="initiateAudit(item)" data-toggle="tooltip"
+                                                    data-placement="top" title="Tooltip on top"><img
+                                                        src="../../../../assets/icons/auditini.png"
+                                                        class="viwe_iamge"></a>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -130,9 +142,9 @@
                             </div>
                             <nav aria-label="Page navigation example">
                                 <div class="pagination justift_end">
-                                  <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
+                                    <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
                                 </div>
-                              </nav>
+                            </nav>
                         </div>
                     </div>
                 </div>
