vendor master, audit process form changes

--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -122,7 +122,7 @@
                                         <label class="form_label">
                                             Auditee Email Id <span class="start_css">*</span>
                                         </label>
-                                        <input type="text" class="form-control" placeholder="xyz@gmail.com"
+                                        <input type="email" class="form-control" placeholder="xyz@gmail.com"
                                             formControlName="auditeeEmail">
                                     </div>
                                 </div>
