--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -64,12 +64,12 @@
                                     <label class="form_label">Actual End Date <span class="start_css">*</span></label>
                                     <input type="date" class="form-control inputbox_css" 
                                     formControlName="actualEndDate" 
-                                    [min]="initiateForm.controls['plannedEndDate'].value">
+                                    [min]="initiateForm.controls['actualStartDate'].value">
                                 </div>
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
-                                    <label class="form_label">Any Other location</label>
+                                    <label class="form_label">Any Other Location</label>
                                     <input type="text" class="form-control" formControlName="otherLocation" placeholder="Enter other location">
                                 </div>
                             </div>
