--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -34,7 +34,7 @@
                             <div class="row" [formGroupName]="i">
                               <div class="col-sm-12" >
                                 <div class="jugme_css">
-                                  <label class="mb-0">Judgment</label>
+                                  <label class="mb-0">Judgement</label>
                                   <div class="d-flex">
                                     <div class="mr-3">
                                       <input type="radio" (click)="judgeValue($event.target,i)" formControlName="JudgementId"      
