minor issue/validation changes

--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -96,9 +96,9 @@
                       <th>Any Other Location</th>
                       <th>Planned Start Date </th>
                       <th>Planned End Date</th>
-                      <th>Report release date</th>
+                      <th>Report Release Date</th>
                       <th>Report</th>
-                      <th>Status Pending at</th>
+                      <th>Status Pending At</th>
                       <th *ngIf="isSuperAdmin || isPlanner">Action </th>
                       <th *ngIf="isSuperAdmin || isPlanner">Add Auditor</th>
                       <th>Status </th>          
