--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -130,7 +130,7 @@
                                                     data-placement="top" title="Tooltip on top"><img
                                                         src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
                                             </td>
-                                            <td *ngIf="(isAuditor || isSuperAdmin || isPlanner) && item.status == 'Accepted'">
+                                            <td *ngIf="(isAuditor || isSuperAdmin || isPlanner) && item.status == 'Accepted' && item.typeOfReport != 'Final'">
                                                 <a (click)="initiateAudit(item)" data-toggle="tooltip"
                                                     data-placement="top" title="Tooltip on top"><img
                                                         src="../../../../assets/icons/auditini.png"
