--- a/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
+++ b/src/app/dashboard/action-plan/action-plan-list/action-plan-list.component.html
@@ -24,7 +24,7 @@
                                         <th>Planned Start Date </th>
                                         <th>Planned End Date</th>
                                         <th>No Of Observation</th>
-                                        <th>Categories</th>
+                                        <th>Audit Completion Date</th>
                                         <th>Score</th>
                                         <th>Action Plan</th>    
                                     </tr>
@@ -37,7 +37,7 @@
                                         <td>{{item.plannedStartDate | date:dateFormat}}</td>
                                         <td>{{item.plannedEndDate | date:dateFormat}}</td>
                                         <td>{{item.observationCount}}</td>
-                                        <td>{{item.categories}}</td>
+                                        <td>{{item.reportReleaseDate | date:dateFormat}}</td>
                                         <td><button class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.score}}</button></td>
                                         <td>
                                             <button (click)="goToCategory(item.id)" class="btn btn-primary"data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.actionPlanStatus}}</button>
