--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.css
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.css
@@ -2,6 +2,9 @@
 .w_226{
   width: 226px;
 }
+.hover-tr ::hover{
+  background-color:#80808012;
+}
 .modal-content {
     margin: auto !important;
   }
