--- a/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
+++ b/src/app/dashboard/audit-plan/create-plan/create-plan.component.html
@@ -138,8 +138,8 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <button class="btn btn-primary" (click)="submit()">Submit</button>
-                            <button class="btn btn-default" (click)="close()">Close</button>
+                            <button type="button" class="btn btn-primary" (click)="submit()">Submit</button>
+                            <button type="button" class="btn btn-default" (click)="close()">Close</button>
                         </div>
                     </form>
                 </div>
