--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -11,37 +11,35 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Vendor Code<span class="start_css">*</span></label>
+                                        <label class="form_label">Vendor Code</label>
                                         <input type="text" class="form-control"
                                         formControlName="vendorCode" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Vendor Name<span class="start_css">*</span></label>
+                                        <label class="form_label">Vendor Name</label>
                                         <input type="text" class="form-control"
                                         formControlName="vendorName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Location <span class="start_css">*</span></label>
+                                        <label class="form_label">Location </label>
                                         <input type="text" class="form-control"
                                         formControlName="locationName" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Any Other location <span
-                                                class="start_css">*</span></label>
+                                        <label class="form_label">Any Other Location </label>
                                         <input type="text" class="form-control"
                                         formControlName="otherLocation" placeholder="Type Any Other location">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Any Other Code <span
-                                                class="start_css">*</span></label>
+                                        <label class="form_label">Any Other Code </label>
                                         <input type="text" class="form-control" placeholder="Type Any Other Code" formControlName="otherCode">
                                     </div>
                                 </div>
@@ -59,21 +57,19 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Type location</label>
+                                        <label class="form_label">Type Location</label>
                                         <input type="text" class="form-control" placeholder="Type location" formControlName="typeLocation">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Planned Start Date <span
-                                                class="start_css">*</span></label>
+                                        <label class="form_label">Planned Start Date </label>
                                         <input type="date" class="form-control inputbox_css" formControlName="plannedStartDate">
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label class="form_label">Planned End Date <span
-                                                class="start_css">*</span></label>
+                                        <label class="form_label">Planned End Date </label>
                                         <input type="date" class="form-control inputbox_css"
                                         formControlName="plannedEndDate">
                                     </div>
@@ -81,7 +77,7 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">
-                                            Additional MSIL email
+                                            Additional MSIL Email
                                         </label>
                                         <input type="text" class="form-control" 
                                             placeholder="Enter Auditee MSIL email"
@@ -91,7 +87,7 @@
                                 <div class="col-sm-3">
                                     <div class="form-group">
                                         <label class="form_label">
-                                            Auditee email id <span class="start_css">*</span>
+                                            Auditee Email Id 
                                         </label>
                                         <input type="text" class="form-control" 
                                             placeholder="xyz@gmail.com" 
@@ -114,8 +110,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer" *ngIf="isSuperAdmin">
-                            <!-- <button class="btn btn-primary" (click)="submit()">Submit</button> -->
+                        <div class="card-footer" >
                             <button class="btn btn-default" (click)="close()">Back</button>
                         </div>
                     </form>
