--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -23,8 +23,8 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="text-center" *ngFor="let item of categoryScoreList;  let i =index;">
-                        <td (click)="details(item.categoryId)">{{i+1}}</td>
+                      <tr *ngFor="let item of categoryScoreList;  let i =index;" style="cursor: pointer;" data-toggle="tooltip" data-placement="top" [title]="item.name" class="hover-tr">
+                        <td (click)="details(item.categoryId)">{{i+1}}.</td>
                         <td (click)="details(item.categoryId)">{{item.name}}</td>
                         <td (click)="details(item.categoryId)">{{item.categoryTotalCount
                         }}/{{item.totalCount}}
